--- a/prod/clusters/demo-eks-a/fleet.yaml
+++ b/prod/clusters/demo-eks-a/fleet.yaml
@@ -5,5 +5,5 @@ helm:
   values:
     clusterName: cluster-zrqhqprfpf
     clusterDisplayName: demo-eks-a
-    amazonCredentialSecret: cattle-global-data:cc-fsg9c
+    amazonCredentialSecret: cattle-global-data:cc-h5rpw
     region: us-gov-east-1
